# kaggle-titanic

./: .gitignore  pyproject.toml  submission.csv  titanicfookawp.ipynb
house-prices/: .gitignore  houseprices.ipynb  submission_1.csv
networks/16_16_16/: population_epoch_1.pkl
titanic/: titanicfookawp.ipynb
