[project]
name = "titanic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.6.0",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "ruff>=0.14.2",
    "torch>=2.9.0",
]
